<resources>
    <string name="app_name">Khatta</string>
    <string name="k_h_a_a_t_a">K H A A T A</string>
    <string name="l_o_g_i_n">U S E R \n L O G I N</string>
    <string name="k_h_a_a_t_a_">K H A A T A</string>
    <string name="s_i_g_n_i_n">S I G N I N</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="c_r_e_a_t_e_a_c_c_o_u_n_t">C R E A T E \n A C C O U N T</string>
    <string name="admin">Admin</string>
    <string name="delete_user">D E L E T E\\t\\tU S E R</string>
    <string name="confirm_delete_user">C O N F I R M</string>
    <string name="yes">Y E S</string>
    <string name="user_deleted">U S E R\\t\\tD E L E T E D</string>
    <string name="no">N O</string>
    <string name="l_o_g_i_n_">L O G I N</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_expense">Add Expense</string>
    <string name="activity">Activity</string>
    <string name="logout">Logout</string>
</resources>