<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/khaata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="105dp"
        android:gravity="center"
        android:text="@string/k_h_a_a_t_a"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="107dp" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="-2dp"
        android:layout_y="191dp"
        android:gravity="center"
        android:text="@string/s_i_g_n_i_n"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="264dp"
        android:gravity="start"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="256dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="296dp"
        android:hint="@string/enter_username"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="283dp"
        android:autofillHints="username"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="348dp"
        android:gravity="start"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="340dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="381dp"
        android:hint="@string/enter_password"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="367dp"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="450dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/l_o_g_i_n"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="450dp" />

    <Button
        android:id="@+id/signupButton"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="550dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/c_r_e_a_t_e_a_c_c_o_u_n_t"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="520dp" />

</AbsoluteLayout>